--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@ai-sdk/openai": "^1.3.16",
+    "@mastra/client-js": "^0.1.17",
     "@mastra/core": "^0.8.3",
     "mastra": "^0.4.9",
     "zod": "^3.24.3"
