--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,9 +12,14 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.501.0",
+		"next": "15.3.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"next": "15.3.0"
+		"tailwind-merge": "^3.2.0",
+		"tw-animate-css": "^1.2.5"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250417.0",
