--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,9 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.6",
+		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-slot": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.501.0",
