feat: プロジェクト名を変更し、エージェント機能を追加

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-coaching-monorepo",
+  "name": "maesta-test-monorepo",
   "version": "1.0.0",
   "description": "モノレポ構成のプロジェクト",
   "private": true,
