--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@ai-sdk/google": "^1.2.12",
     "@ai-sdk/openai": "^1.3.16",
     "@mastra/client-js": "^0.1.17",
     "@mastra/core": "^0.8.3",
