--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@mastra/client-js": "^0.1.17",
 		"@radix-ui/react-avatar": "^1.1.6",
 		"@radix-ui/react-label": "^2.1.4",
 		"@radix-ui/react-slot": "^1.2.0",
